# arena-shooter

./: '  .env.example  .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  current_singleplayer_flow  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  rust.yml
art/: Untitled.blend  Untitled.blend1  damage_indicator.xcf  fun_shooter.blend  fun_shooter.blend1  muzzle_flash.xcf
assets/: main.gltf  medkit.gltf
assets/blender_src/: fun_shooter.blend  fun_shooter.blend1
assets/maps/main/: fps_tps_map.glb  main.gltf  navmesh.gltf
assets/maps/medium/: license.txt  scene.gltf
assets/maps/medium_plastic/: scene.gltf
assets/maps/tiny_town/: main.gltf
assets/maps/tiny_town (Copy)/: main.gltf
assets/models/player/: arm_and_weapon.glb
assets/models/world_objects/: medkit.gltf
assets/weapons/rifle/: WA_2000.glb
crates/client/: Cargo.toml
crates/client/assets/blender_src/: fun_shooter.blend  fun_shooter.blend1
crates/client/assets/maps/medium_plastic/: scene.gltf
crates/client/assets/maps/tiny_town/: main.gltf
crates/client/assets/weapons/: assault_rifle.glb  pistol.glb
crates/client/src/: auth.rs  client.rs  main.rs  network.rs  protocol.rs  server.rs
crates/client/src/audio/: mod.rs
crates/client/src/character_controller/: components.rs  messages.rs  mod.rs  systems.rs
crates/client/src/enemy/: mod.rs
crates/client/src/enemy/ai/: components.rs  systems.rs
crates/client/src/enemy/animate/: messages.rs  mod.rs  systems.rs
crates/client/src/enemy/shooting/: systems.rs
crates/client/src/enemy_visuals/: mod.rs
crates/client/src/enemy_visuals/animate/: components.rs  messages.rs  mod.rs  systems.rs
crates/client/src/game_flow/: game_mode.rs  mod.rs  score.rs  states.rs  systems.rs
crates/client/src/game_settings/: mod.rs
crates/client/src/gameplay_debug/: debug_overlay.rs  mod.rs  states_overlay.rs
crates/client/src/nav_mesh_pathfinding/: mod.rs
crates/client/src/particles/: mod.rs
crates/client/src/player/: input.rs  mod.rs  movement.rs
crates/client/src/player/camera/: components.rs  messages.rs  mod.rs  systems.rs  weapon_positions.rs
crates/client/src/player/hud/: components.rs  mod.rs  systems.rs
crates/client/src/player/shooting/: asset_paths.rs  components.rs  messages.rs  mod.rs  resources.rs  systems.rs
crates/client/src/player/spawn/: mod.rs
crates/client/src/shared/: components.rs  mod.rs  systems.rs
crates/client/src/ui/: common.rs  credits_screen.rs  disconnect_screen.rs  main_menu.rs  map_selection.rs  mod.rs  pause_menu.rs
crates/client/src/ui/hud/: components.rs  mod.rs  systems.rs
crates/client/src/ui/menus/: credits.rs  game_mode_selection.rs  main_menu.rs  map_selection.rs  mod.rs
crates/client/src/ui/menus/settings_menu/: audio.rs  controls.rs  graphics.rs  mod.rs
crates/client/src/ui/screens/: buy_overlay.rs  buy_screen.rs  death_screen.rs  loading_screen.rs  mod.rs  pause_screen.rs  score_board_overlay.rs  server_selection.rs
crates/client/src/ui/settings_menu/: mod.rs
crates/client/src/ui/widgets/: button.rs  checkbox.rs  text.rs
crates/client/src/user_interface/: common.rs  credits_screen.rs  death_screen.rs  debug_overlay.rs  disconnect_screen.rs  game_mode_selection.rs  loading_screen.rs  main_menu.rs  map_selection.rs  mod.rs  pause_menu.rs  score_board_overlay.rs  shared.rs
crates/client/src/user_interface/settings_menu/: audio.rs  mod.rs
crates/client/src/user_interface/widgets/: button.rs  checkbox.rs  mod.rs  progressbar.rs  slider.rs
crates/client/src/utils/: mod.rs  query_filters.rs  random.rs
crates/client/src/world/: collider_rules.rs  components.rs  messages.rs  mod.rs  systems.rs
crates/client/src/world/world_objects/: medkit.rs  mod.rs
crates/create_colliders_json/: README.md  main.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs
crates/game_core/src/enemy/: mod.rs
crates/game_core/src/enemy/ai/: components.rs  messages.rs  mod.rs  systems.rs
crates/game_core/src/enemy/shooting/: messages.rs  mod.rs  systems.rs
crates/game_core/src/enemy/spawn/: mod.rs
crates/game_core/src/game_flow/: mod.rs
crates/game_core/src/nav_mesh_pathfinding/: mod.rs  utils.rs
crates/game_core/src/player/: mod.rs
crates/game_core/src/world_objects/: components.rs  mod.rs  systems.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  main.rs  systems.rs  utils.rs
crates/server/src/enemy/ai/: mod.rs  systems.rs
crates/server/src/enemy/animate/: systems.rs
crates/server/src/enemy/shooting/: components.rs  mod.rs  systems.rs
crates/server/src/enemy/spawn/: mod.rs
crates/server/src/nav_mesh_pathfinding/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: character_controller.rs  collider_rules.rs  components.rs  game_score.rs  lib.rs  messages.rs  multiplayer_messages.rs  player.rs  protocol.rs  query.rs  shooting.rs  world_object.rs
src/: main.rs
src/audio/: mod.rs
src/character_controller/: components.rs  mod.rs  systems.rs
src/common/: components.rs  mod.rs  systems.rs
src/debug_hud/: mod.rs  systems.rs
src/enemy/: mod.rs
src/enemy/ai/: components.rs  messages.rs  mod.rs  systems.rs
src/enemy/animate/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/enemy/shooting/: components.rs  events.rs  messages.rs  (+2 more)
src/game_flow/: game_mode.rs  mod.rs  score.rs  states.rs  systems.rs
src/game_settings/: mod.rs  utils.rs
src/gameplay_debug/: mod.rs
src/ground_detection/: components.rs  mod.rs  systems.rs
src/kinematic_controller/: mod.rs
src/multiplayer/: mod.rs
src/music/: mod.rs
src/nav_mesh_pathfinding/: mod.rs
src/particles/: mod.rs
src/player/: components.rs  mod.rs  systems.rs
src/shared/: components.rs  mod.rs  systems.rs
src/user_interface/: common.rs  death_screen.rs  debug_overlay.rs  game_mode_selection.rs  main_menu.rs  map_selection.rs  mod.rs  pause_menu.rs  settings_menu.rs  shared.rs
src/utils/: mod.rs  random.rs  transform.rs
src/world/: collider_rules.rs  components.rs  messages.rs  mod.rs  resources.rs  systems.rs
(+39 files in other folders)
