[workspace]
resolver = "3"
members = [
  "crates/client",
  "crates/game_core",
  "crates/server",
  "crates/shared"
]

# Shared dependencies, used in both client and server crate
[workspace.dependencies]
async-compat = "0.2.5"
avian3d = { version = "0.6.0-rc.1", features = ["f32"] }
bevy = "0.18.0"
bevy-inspector-egui = "0.36.0"
lightyear = { version = "0.26.0", default-features = false, features = [
  "client",
  "netcode",
  "replication",
  "server",
  "std",
  "trace",
  "udp"
] }
rand = "0.9.2"
serde_json = "1.0.145"
shared = { path = "./crates/shared", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["io-util", "net"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# [patch.crates-io]
# lightyear = { path = "../lightyear/lightyear/" }
