[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = { workspace = true }
avian3d = { workspace = true, features = ["serialize"] }
bevy = { workspace = true, features = [
  "bevy_dev_tools",
  "dynamic_linking",
  "experimental_bevy_ui_widgets",
  "file_watcher",
  "mp3",
  "track_location",
  "wayland"
] }
bevy_embedded_assets = "0.15.0"
bevy_hanabi = { git = "https://github.com/pcwalton/bevy_hanabi", version = "0.16.0" }
bevy-inspector-egui = { workspace = true }
bevy_rich_text3d = "0.6.0"
bevy_skein = "0.5.0"
dirs = "6.0.0"
game_core = { path = "../game_core", version = "0.1.0" }
lightyear = { workspace = true }
rand = { workspace = true }
serde = "1.0.228"
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
