[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = { workspace = true }
avian3d = { workspace = true, features = ["serialize"] }
bevy = { workspace = true, features = [
  "bevy_dev_tools",
  "experimental_bevy_ui_widgets",
  "file_watcher",
  "mp3",
  "wayland",
] }
bevy_embedded_assets = "0.15.0"
bevy_hanabi = "0.18.0"
bevy-inspector-egui = { workspace = true }
# we need this so we can toggle nav mesh debug gizmo visibility on the client
bevy_landmass = "0.11.0"
bevy_rich_text3d = "0.6.0"
bevy_skein = "0.5.0"
dirs = "6.0.0"
game_core = { path = "../game_core", version = "0.1.0" }
lightyear = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }

[features]
default = ["debug-build"]
debug-build = [
  "bevy/dynamic_linking",
  "bevy/track_location",
]
