[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[dependencies]
avian_rerecast = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_landmass = "0.11.0"
bevy_rerecast = { version = "0.4.0", default-features = false }
landmass_rerecast = "0.2.0"
lightyear = { workspace = true }
rand = { workspace = true }
shared.workspace = true

[lints]
workspace = true
