[package]
name = "game_core"
version = "0.1.0"
edition = "2024"

[dependencies]
avian_rerecast = { version = "0.4.0" }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_common_assets = { version = "0.15.0", features = ["json"] }
bevy_landmass = "0.11.0"
bevy_rerecast = { version = "0.4.0", default-features = false, features = [
  "editor_integration"
] }
landmass_rerecast = "0.2.0"
lightyear = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared.workspace = true
