[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
dotenvy = "0.15.7"
hex = "0.4.3"
lightyear = {version = "0.25.5", features = ["server", "netcode", "replication", "udp", "trace", "std"]}
lightyear_replication = "0.25.5"
avian_rerecast = "0.3.0"
bevy_landmass = "0.10.0"
bevy_rerecast = "0.3.0"
landmass_rerecast = "0.1.0"
shared = { workspace = true }
tokio = {workspace = true}
async-compat = {workspace = true}
rand = {workspace = true}
serde_json = {workspace = true}
