[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = {workspace=true}
bevy-inspector-egui = "0.35.0"
dotenvy = "0.15.7"
hex = "0.4.3"
lightyear = {workspace = true}
lightyear_replication = "0.25.5"
shared = { workspace = true }
tokio = {workspace = true}
async-compat = {workspace = true}
rand = {workspace = true}
serde_json = {workspace = true}
bevy_common_assets = {version = "0.15.0", features = ["json"]}
game_core = { version = "0.1.0", path = "../game_core" }
